--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -1,6 +1,6 @@
 {
   "header": {
-    "title": "Комплексний <br /> автопідбір \"під ключ\"",
+    "title": "Комплексний <br /> автопідбір під ключ",
     "overview": "Допоможемо підібрати ідеальний <br /> автомобіль за вашими критеріями"
   },
   "button": {
@@ -10,28 +10,28 @@
     "title": "Наші послуги",
     "accordion": {
       "sectionOne": {
-        "title": "Комплексний автопідбір \"під ключ\"",
-        "description": "Беремо на себе весь процес: пошук, перевірка, діагностика, торг, перевірка документів та супровід угоди. Клієнт отримує лише найкращі варіанти та фінальний звіт по обраному авто"
+        "title": "Повний автопідбір \"під ключ\"",
+        "description": "Ми беремо весь процес на себе: пошук, перевірка, діагностика, торг, перевірка документів та супровід угоди. Клієнт отримує тільки найкращі варіанти та фінальний звіт по вибраному авто"
       },
       "sectionTwo": {
         "title": "Разова перевірка вибраного авто",
-        "description": "Приїжджаємо до конкретного оголошення. На місці перевіряємо кузов, двигун, підвіску, електроніку, робимо діагностику, вимірюємо лакофарбове покриття і даємо вердикт: брати чи не брати."
+        "description": "Виїжджаємо на конкретне оголошення. На місці перевіряємо кузов, двигун, підвіску, електроніку, робимо діагностику, вимірюємо лакофарбове покриття та даємо вердикт: брати чи не брати"
       },
       "sectionThree": {
         "title": "Діагностика перед покупкою",
-        "description": "Фокус на технічному стані. Визначаємо приховані проблеми, реальні витрати найближчим часом, оцінюємо ризики. Підходить, якщо клієнт майже визначився."
+        "description": "Фокус на технічному стані. Визначаємо приховані проблеми, реальні вкладення найближчим часом, оцінюємо ризики. Підходить, якщо клієнт вже майже визначився"
       },
       "sectionFour": {
-        "title": "Підбір авто під бюджет",
-        "description": "Ви даєте суму — ми підбираємо оптимальні варіанти в цій ціні. Наше завдання — знайти найбільш надійний і живий варіант без переплати."
+        "title": "Перевірка документів та юридичної чистоти",
+        "description": "Пробиваємо VIN, історію обслуговування, страхові записи, участь у ДТП, застави, лізинг, арешти. Гарантуємо, що авто юридично чисте та безпечне для покупки"
       },
       "sectionFive": {
-        "title": "Перевірка документів і юридичної чистоти",
-        "description": "Перевіряємо VIN, історію обслуговування, страхові записи, участь у ДТП, застави, лізинг, арешти. Гарантуємо, що машина юридично чиста і безпечна для покупки."
+        "title": "Онлайн-консультації перед покупкою",
+        "description": "Оцінюємо оголошення дистанційно: по фото, опису, відео та історії. Говоримо одразу, чи варто їхати дивитись або краще не витрачати час"
       },
       "sectionSix": {
-        "title": "Онлайн-консультації перед покупкою",
-        "description": "Оцінюємо оголошення дистанційно: по фото, опису, відео та історії. Одразу кажемо, чи варто їхати дивитись, чи краще не витрачати час."
+        "title": "Оцінка вартості автомобіля",
+        "description": "Проведемо професійну оцінку автомобіля перед покупкою для розуміння реальної вартості"
       }
     }
   }
