--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,23 +15,23 @@
       },
       "sectionTwo": {
         "title": "Разовая проверка выбранного авто",
-        "description": "Вызываемся на конкретное объявление. На месте проверяем кузов, двигатель, подвеску, электронику, делаем диагностику, измеряем лакокрасочное покрытие и даём вердикт: брать или не брать."
+        "description": "Вызываемся на конкретное объявление. На месте проверяем кузов, двигатель, подвеску, электронику, делаем диагностику, измеряем лакокрасочное покрытие и даём вердикт: брать или не брать"
       },
       "sectionThree": {
         "title": "Диагностика перед покупкой",
-        "description": "Фокус на техническом состоянии. Определяем скрытые проблемы, реальные вложения в ближайшее время, оцениваем риски. Подходит, если клиент уже почти определился."
+        "description": "Фокус на техническом состоянии. Определяем скрытые проблемы, реальные вложения в ближайшее время, оцениваем риски. Подходит, если клиент уже почти определился"
       },
       "sectionFour": {
-        "title": "Подбор авто под бюджет",
-        "description": "Вы даёте сумму — мы подбираем оптимальные варианты в этой цене. Наша задача — найти максимально надёжный и живой вариант без переплаты."
+        "title": "Проверка документов и юридической чистоты",
+        "description": " Пробиваем VIN, историю обслуживания, страховые записи, участие в ДТП, залоги, лизинг, аресты. Гарантируем, что машина юридически чиста и безопасна к покупке"
       },
       "sectionFive": {
-        "title": "Проверка документов и юридической чистоты",
-        "description": "Пробиваем VIN, историю обслуживания, страховые записи, участие в ДТП, залоги, лизинг, аресты. Гарантируем, что машина юридически чиста и безопасна к покупке."
+        "title": " Онлайн-консультации перед покупкой",
+        "description": "Оцениваем объявление дистанционно: по фото, описанию, видео и истории. Говорим сразу, стоит ли ехать смотреть или лучше не тратить время"
       },
       "sectionSix": {
-        "title": "Онлайн-консультации перед покупкой",
-        "description": "Оцениваем объявление дистанционно: по фото, описанию, видео и истории. Говорим сразу, стоит ли ехать смотреть или лучше не тратить время."
+        "title": " Оценка стоимости автомобиля",
+        "description": "Проведем профессиональную оценку автомобиля перед покупкой для понимания реальной стоимости"
       }
     }
 }
